--- a/day-16-angular_forms/angular-forms/angular.json
+++ b/day-16-angular_forms/angular-forms/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angular_forms": {
+    "angular-forms": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/angular_forms",
+            "outputPath": "dist/angular-forms",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -64,10 +64,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "angular_forms:build:production"
+              "buildTarget": "angular-forms:build:production"
             },
             "development": {
-              "buildTarget": "angular_forms:build:development"
+              "buildTarget": "angular-forms:build:development"
             }
           },
           "defaultConfiguration": "development"
